Fix travis test db settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ rvm:
 
 before_script:
   - cp config/database.yml.travis config/database.yml
-  - psql -c 'create database chess_app_test;' -U postgres
+  - psql -c 'create database pawnshop_test  ;' -U postgres
 
 # Configure to use Code Climate
 addons:
